Version 0.6.1 -
----------------------------
- Fix: in rendering sortable columns


Version 0.6.0 - Jan 9, 2021
----------------------------
- New: implemented GridView basic functionality
- New: implemented callback functionality to GridView items
- New: implemented CSS classes for headers and rows in GridView
- New: added sorting links to table column headers
- New: added possibility to wrap table in responsive DIV
- New: added translation files
- Enh: added test for DataGrid Message


Version 0.5.2 - Jan 4, 2021
----------------------------
- Fix: error in Filtering for multiselect gropdown boxes


Version 0.5.1 - Jan 3, 2021
----------------------------
- Fix: error in argument validation in Pagination


Version 0.5.0 - Jan 3, 2021
----------------------------
- New: added config file
- New: added possibility to publish config and view files
- New: added unit tests


Version 0.4.2 - Dec 31, 2020
----------------------------
- Fix: wrong argument exception in Pagination class


Version 0.4.1 - Dec 30, 2020
----------------------------
- Fix: in rendering of Filter section


Version 0.4.0 - Dec 30, 2020
----------------------------
- Enh: code refactoring in DataGridServiceProvider
- Enh: HTML code extracted to view blade files
- Enh: min PHP version is defined as PHP 7.1


Version 0.3.1 - Dec 26, 2020
----------------------------
- Fix: class Message comply with psr-0 autoloading standard


Version 0.3.0 - Dec 26, 2020
----------------------------
- New: added "jenssegers/agent": "^2.6" dependency for mobile view support
- Eng: class Messages renamed into Message
- Eng: updated README examples


Version 0.2.0 - Dec 23, 2020
----------------------------
- New: added view files
- New: added new class messages
- Enh: changes in README


Version 0.1.0 - Dec 21, 2020
----------------------------
- New: package renamed into apphp/laravel-datagrid
- New: added DataGridServiceProvider


Version 0.0.1 - Dec 20, 2020 (Initial release)
----------------------------